# anthology-of-the-sota

./: 404.html  README.llm  README.md  README_LLM.md  SUMMARY  index.html  pyproject.toml
.github/workflows/: build-readme.yaml  build_readme.yaml  build_readme.yml  build_registry.yaml  build_registry.yml  deploy-frontend.old  deploy-frontend.yaml  deploy-frontend.yaml.react  deploy-frontend.yml  generate-package-lock.yaml  generate-package-lock.yml  generate_summaries.yaml  render_svg.yaml  test.yml  test_frontend.yaml
404/: index.html
500/: index.html
SUMMARIES/: PYTHON.md  READMEs.md
_next/data/58NtcFmq14_CtOpL0wp-O/: index.json
_next/data/MSPB4E8zUn6ueEQkQqHz3/: index.json
_next/data/Ngz4Wa78UkuXLb08sbhdI/: index.json
_next/data/bXy0uGuiJ90o6qzLOZ_0K/: index.json
_next/static/MSPB4E8zUn6ueEQkQqHz3/: _buildManifest.js
_next/static/Ngz4Wa78UkuXLb08sbhdI/: _buildManifest.js
_next/static/bXy0uGuiJ90o6qzLOZ_0K/: _buildManifest.js
_next/static/chunks/: 664-16bd66f3b4b7a704.js  main-703b4e183f1979a4.js  main-7b00b1adf7d26c58.js  webpack-8a90ac1b52c34570.js  webpack-a04c9acd12c4dbf8.js
_next/static/chunks/pages/: 404-275bfd1b7075705a.js  404-90f8387d7cb9d4bf.js  (+8 more)
_next/static/rpjA_orezHITiM1qHTnLH/: _buildManifest.js
attic/: SUMMARY  registry_DEPRECATED.py  test_registry.py
data/: REGISTRY.md  SUMMARY  registry.yaml  research.yaml
docs/readme/: SUMMARY  base.md.j2
docs/readme/sections/: SUMMARY  development.md.j2  introduction.md.j2  logo.md  registry.md.j2  structure.md.j2
docs/readme_llm/: SUMMARY
docs/readme_llm/sections/: SUMMARY  registry_naming_conventions.md.j2
frontend/: .babelrc  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: recommendations.ts
frontend/src/utils/: recommendations.test.tsx  recommendations.ts
github/workflows/: SUMMARY
output/: REGISTRY.md  SUMMARY  registry.yaml
scripts/: main.js  readme_generator.py
src/scripts/: SUMMARY  generate-package-lock.js  readme_generator.py  registry.py  utils.py
src/scripts/generate_summaries/: SUMMARY  __init__.py  __main__.py  signature_extractor.py  special_summaries.py
src/scripts/registry/: SUMMARY  __init__.py  cli.py  identifiers.py  io.py  recommendations.py  types.py
styles/: main.css
tests/: SUMMARY  conftest.py  test_generate_readme.py  test_registry.py
tests/registry/: SUMMARY  test_identifiers.py  test_io.py  test_recommendations.py
web/: SUMMARY  next.config.js  package.json  tsconfig.js
web/scripts/: SUMMARY  main.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/styles/: SUMMARY
(+32 files in other folders)
