[project]
name = "scripts"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.2",
    "tomli>=2.0.1",
    "loguru>=0.7.0",
    "fire>=0.5.0",
    "tree-format>=0.1.2",
    "pyyaml", # todo: deprecate in favor of omegaconf
    "omegaconf",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
site = [
    "markdown2>=2.4.0",
]
summary = [
    "loguru>=0.7.0",
    "fire>=0.5.0",
]
# Meta-dependency that includes everything
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "markdown2>=2.4.0",
]

[
project.scripts
]
build-registry = "scripts.registry.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=readme_generator --cov=summary_generator"

[tool.readme.tree]
ignore_patterns = [
    "__pycache__",
    "*.pyc",
    ".git",
    ".venv",
    ".pytest_cache",
    ".vscode",
    ".idea",
    "*.egg-info",
]
